[package]
name = "hashcons"
version = "0.1.2"
authors = ["Matthew A. Hammer", "Ryan Vandersmith"]
edition = "2018"

# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown)
description = "Hash cons'ing for compact representations of shared, immutable data structures"

# These URLs point to more information about the repository
documentation = "https://docs.rs/hashcons"
homepage = "https://github.com/Adapton/hashcons.rust/"
repository = "https://github.com/Adapton/hashcons.rust/"

# This is a small list of keywords used to categorize and search for this
# package.
keywords = ["memoization", "hash_cons", "merkle_trees"]

# This points to a file in the repository (relative to this Cargo.toml). The
# contents of this file are stored and indexed in the registry.
readme = "README.md"

# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can
# be separated with a `/`
license = "MPL-2.0"

[dependencies]
serde = { version = "1.0", features = ["rc"] }
serde_json = "1.0"
serde_derive = "1.0"
